pnet_macros/tests/compile-fail/multiple_payload.stderr
error: packet may not have multiple payloads
  --> $DIR/multiple_payload.rs:18:7
   |
18 |     #[payload]  //~ ERROR packet may not have multiple payloads
   |       ^^^^^^^
